--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ethersproject/shims": "5.7.0",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "1.17.9",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/push-notification-ios": "1.2.0",
     "@react-native-firebase/analytics": "^8.0.0",
@@ -20,7 +22,7 @@
     "@reduxjs/toolkit": "^1.8.1",
     "@tradle/react-native-http": "^2.0.1",
     "@unstoppabledomains/resolution": "2.1.1",
-    "@walletconnect/react-native-dapp": "1.7.0",
+    "@walletconnect/react-native-dapp": "1.8.0",
     "assert": "^1.5.0",
     "axios": "^0.27.2",
     "base-64": "0.1.0",
@@ -80,7 +82,7 @@
     "react-native-simple-toast": "^1.1.3",
     "react-native-sqlite-2": "3.0.1",
     "react-native-status-bar-height": "2.6.0",
-    "react-native-svg": "12.1.0",
+    "react-native-svg": "9.6.4",
     "react-native-tcp": "^3.3.2",
     "react-native-udp": "^2.7.0",
     "react-native-unimodules": "~0.12.0",
