--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "postinstall": "node_modules/.bin/rn-nodeify --install crypto,assert,url,stream,events,http,https,os,url,net,fs --hack"
+    "postinstall": "node_modules/.bin/rn-nodeify --install crypto,assert,url,stream,events,http,https,os,url,net,fs --hack && patch-package"
   },
   "dependencies": {
     "@ethersproject/shims": "^5.7.0",
@@ -72,6 +72,8 @@
     "react-native-svg": "9.6.4",
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "4.1.5",
+    "react-native-video": "^6.0.0-alpha.1",
+    "react-native-youtube": "^2.0.2",
     "react-redux": "^8.0.2",
     "readable-stream": "^1.0.33",
     "redux-persist": "^6.0.0",
@@ -96,6 +98,8 @@
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.70.3",
+    "patch-package": "^6.4.7",
+    "postinstall-postinstall": "^2.1.0",
     "react-native-dotenv": "^3.3.1",
     "react-test-renderer": "18.0.0",
     "rn-nodeify": "^10.3.0",
