--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "axios": "^0.27.2",
     "base-64": "^1.0.0",
     "crypto-js": "^4.1.1",
+    "deprecated-react-native-prop-types": "^2.3.0",
     "dotenv": "^16.0.1",
     "eccrypto": "^1.1.6",
     "eth-crypto": "^2.3.0",
@@ -62,6 +63,7 @@
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.12.4",
     "react-native-parsed-text": "^0.0.22",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.3.3",
     "react-native-safe-area-view": "^1.1.1",
