--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,11 @@
 {
 	// Set the default
-	"editor.formatOnSave": false,
+	"editor.formatOnSave": true,
 	// Enable per-language
 	"[javascript]": {
 		"editor.formatOnSave": true
 	},
 	"[typescript]": {
-		"editor.formatOnSave": true
+		"editor.defaultFormatter": "esbenp.prettier-vscode"
 	},
 }
