--- a/app.json
+++ b/app.json
@@ -13,7 +13,10 @@
     ],
     "assetBundlePatterns": [
       "**/*"
-    ]
+    ],
+    "ios": {
+      "bundleIdentifier": "io.epns.epns"
+    }
   },
   "plugins": [
     [
