--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "assert": "^1.5.0",
     "axios": "^0.27.2",
     "base-64": "^1.0.0",
-    "crypto-js": "^4.1.1",
+    "crypto-js": "3.1.9-1",
     "deprecated-react-native-prop-types": "^2.3.0",
     "dotenv": "^16.0.1",
     "eccrypto": "^1.1.6",
