--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react": "18.0.0",
     "react-native": "0.69.4",
     "react-native-crypto": "^2.2.0",
+    "react-native-encrypted-storage": "^4.0.2",
     "react-native-fast-openpgp": "^2.4.2",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-hash": "^3.0.0",
