--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "react-native-sqlite-2": "^3.6.1",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-svg": "9.6.4",
+    "react-native-svg-uri": "^1.2.3",
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "4.1.5",
     "react-native-video": "^6.0.0-alpha.1",
