--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ethersproject/shims": "^5.7.0",
     "@expo/vector-icons": "^13.0.0",
+    "@giphy/react-native-sdk": "^1.11.1",
     "@metamask/eth-sig-util": "^5.0.0",
     "@notifee/react-native": "^5.7.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
