--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/dotenv": "^8.2.0",
     "@unstoppabledomains/resolution": "2.1.1",
     "@walletconnect/react-native-dapp": "1.8.0",
+    "@web3-react/walletconnect-connector": "^6.2.13",
     "assert": "^1.5.0",
     "axios": "^0.27.2",
     "base-64": "^1.0.0",
@@ -84,7 +85,8 @@
     "stream-browserify": "^1.0.0",
     "styled-components": "^5.3.5",
     "url": "^0.10.3",
-    "web3": "^1.7.5"
+    "web3": "^1.7.5",
+    "web3-react": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
