--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <!-- END OPTIONAL PERMISSIONS -->
 
+    <uses-permission
+    android:name="android.permission.REQUEST_INSTALL_PACKAGES"
+    tools:node="remove"
+  />
+
     <application
     android:name=".MainApplication"
     android:label="@string/app_name"
