--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.12.4",
     "react-native-parsed-text": "^0.0.22",
+    "react-native-peerjs": "^1.0.4",
     "react-native-progress-circle": "^2.1.0",
     "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.3.3",
@@ -83,6 +84,7 @@
     "react-native-tcp": "^3.2.1",
     "react-native-udp": "4.1.5",
     "react-native-video": "^6.0.0-alpha.1",
+    "react-native-webrtc": "1.84.1",
     "react-native-youtube": "^2.0.2",
     "react-redux": "^8.0.2",
     "readable-stream": "^1.0.33",
