--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "react-native-reanimated": "^3.7.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-safe-area-view": "^1.1.1",
-    "react-native-screens": "~3.20.0",
+    "react-native-screens": "^3.20.0",
     "react-native-simple-peer": "^0.1.5",
     "react-native-simple-toast": "^1.1.4",
     "react-native-sqlite-2": "^3.6.1",
